# app-talk-to-data-streamlit_V1

./: .config.toml  .gitignore  README.md  pyproject.toml
app-talk-to-data-streamlit-V1/: app.py
