[tool.poetry]
name = "app-talk-to-data-streamlit-v1"
version = "0.1.0"
description = ""
authors = ["Adenis Segal <adenis.segal@inovally.com.br>"]
readme = "README.md"
packages = [{include = "app-talk-to-data-streamlit-V1"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.5.3"
streamlit = "^1.37.0"
deep_translator = "1.11.4"
matplotlib = "3.8.3"
openai = "1.31.2"
pandasai = "2.1.1"
pymongo = "4.6.2"
python-dotenv = "1.0.1"
tenacity = "8.2.3"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
